--- a/components/css/CertItem.css
+++ b/components/css/CertItem.css
@@ -3,8 +3,10 @@
   border-radius: 10px;
   background-color: var(--background);
   width: fit-content;
+  min-width: fit-content;
   padding: 10px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   position: relative;
   transition: all 300ms ease-in-out;
   box-shadow: 0 2px 8px var(--shadow);
@@ -25,6 +27,7 @@
 .cert-item__meta {
   color: var(--foreground-muted);
   display: block;
+  font-size: 0.875rem;
 }
 
 .cert-item__details {
@@ -39,5 +42,4 @@
   font-size: .5rem;
   vertical-align: middle;
   margin-right: 0.5rem;
-  color: var(--border);
 }
